Fix signUp end signIn tests