@@ -1,6 +1,9 @@
 package com.example.security;
 
+import com.example.entity.AuthInfoEntity;
+import com.example.reposiroty.AuthInfoRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -8,30 +11,25 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.Map;
+import java.util.*;
 
 @Service
 @RequiredArgsConstructor
 public class LoadUserDetailService implements UserDetailsService {
 
-    private final PasswordEncoder passwordEncoder;
-
-    private final Map<String, String> inMemoryUsers = new HashMap<>();
+    private final AuthInfoRepository authInfoRepository;
 
     @Override
     public UserDetails loadUserByUsername(final String username) throws UsernameNotFoundException {
-        final String password = inMemoryUsers.get(username);
-        if(password == null){
-            return null;
-        }else {
-            return new User(username, password, Collections.emptyList());
+        final Optional<AuthInfoEntity> authInfoEntity = authInfoRepository.findByLogin(username);
+        if (authInfoEntity.isEmpty()) {
+            throw new UsernameNotFoundException("User with email: " + username + " not found");
+        } else {
+            final SimpleGrantedAuthority authority = new SimpleGrantedAuthority(
+                    "ROLE_" + authInfoEntity.get().getUserEntity().getUserRole().name());
+            return new User(username, authInfoEntity.get().getPassword(), List.of(authority));
         }
 
     }
 
-    public void saveUser(final String username, final String password){
-        inMemoryUsers.put(username, passwordEncoder.encode(password));
-    }
 }
